[gd_scene load_steps=11 format=3 uid="uid://qodkqqspdu45"]

[ext_resource type="Script" path="res://window/emergency_reset.gd" id="1_nje28"]
[ext_resource type="PackedScene" uid="uid://c53hg16gh72vg" path="res://parts/card_slot.tscn" id="1_y6yfu"]
[ext_resource type="Texture2D" uid="uid://dphd0386txg3n" path="res://parts/reset_lights/reset_lights_back.png" id="2_43ydy"]
[ext_resource type="Script" path="res://item/item_data.gd" id="3_cri8k"]
[ext_resource type="Texture2D" uid="uid://dpc8h7lctyuh5" path="res://parts/reset_lights/reset_lights_front.png" id="3_nqe8a"]
[ext_resource type="Texture2D" uid="uid://b5l3ao50sjepl" path="res://resources/textures/id-card.png" id="4_fwkse"]

[sub_resource type="Resource" id="Resource_17a2a"]
script = ExtResource("3_cri8k")
name = "Red ID card"
texture = ExtResource("4_fwkse")
is_card = true
color = Color(1, 0.192157, 0.258824, 1)

[sub_resource type="Animation" id="Animation_af03s"]
resource_name = "new_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ResetLights:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(0, 0, 0, 0),
"update": 0,
"values": [4.0, 0.0, 4.0, 0.0]
}

[sub_resource type="Animation" id="Animation_2mf76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ResetLights:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lx8ig"]
_data = {
"RESET": SubResource("Animation_2mf76"),
"new_animation": SubResource("Animation_af03s")
}

[node name="EmergencyReset" type="ColorRect"]
offset_right = 213.0
offset_bottom = 113.0
color = Color(1, 0.470588, 0.168627, 1)
script = ExtResource("1_nje28")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 71.0
offset_right = 198.0
offset_bottom = 102.0
text = "reset"

[node name="CardSlot" parent="." instance=ExtResource("1_y6yfu")]
position = Vector2(72, 77)
inserted_card = SubResource("Resource_17a2a")

[node name="ResetLights" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 198.0
offset_bottom = 37.0
max_value = 4.0
texture_under = ExtResource("2_43ydy")
texture_progress = ExtResource("3_nqe8a")
tint_progress = Color(0.481212, 0.845934, 7.70092e-07, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lx8ig")
}

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
